learning activity week 1 (part 2. 5 of 7) finished

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,8 @@ node_modules
 # will be manually created by you or dynamically # created on the hosting server
 .env
 
-# .DS_Store is only for Mac users
-**/.DS_Store
+# Ignore lock yaml file
+pnpm-lock.yaml
+
+# Ignore readme file
+README.md
